--- a/env/.local.env
+++ b/env/.local.env
@@ -5,7 +5,7 @@
 
 # Web application settings
 APP_ENV=local
-APP_NAME=React App
+APP_NAME=Ray Invest
 APP_ORIGIN=http://localhost:5173
 API_ORIGIN=https://api-mcfytwakla-uc.a.run.app
 
